--- a/AI_Chatbot/chatbot/templates/chat.html
+++ b/AI_Chatbot/chatbot/templates/chat.html
@@ -14,7 +14,13 @@
 {% block content %}
 <div class="chat-container">
   <div class="card flex-grow-1">
-    <div class="card-header bg_info text-white">IMMOBIL Chatbot</div>
+    <div class="card-header bg_info text-white d-flex justify-content-between align-items-center">
+        <span>IMMOBIL Chatbot</span>
+        <a href="{% url 'clear_chat' %}" class="btn btn-danger btn-sm">
+            EFFACER
+        </a>
+    </div>
+
     <div class="card-body messages-box">
       
       <ul class="list-unstyled messages-list">
@@ -58,10 +64,10 @@
     <br><br>
     <br><br>
   </div>
-  <form class="message-form">
+  <form method="POST" class="message-form">
     {%csrf_token%}
     <div class="input-group">
-      <input type="text" class="form-control message-input" placeholder="Type Vousr message...">
+      <input type="text" name="user_message" class="form-control message-input" placeholder="Entrez un message...">
       <div class="input-group-append">
         <button type="submit" class="btn btn-primary btn-send">Send</button>
       </div>
@@ -93,19 +99,20 @@
           <div class="message-content">
             ${message}
           </div>
-        </div>`;
+        </div>
+    `;
     messagesList.appendChild(messageItem);
 
     //clear from input box  
     messageInput.value = '';
 
     //send data to backend
-    fetch('', {
+    fetch("{% url 'send_message' %}", {
       method: 'POST',
       headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
       body: new URLSearchParams({
         'csrfmiddlewaretoken': document.querySelector('[name=csrfmiddlewaretoken]').value,
-        'message': message
+        'user_message': message
       })
     })
       .then(response => response.json())
