--- a/AI_Chatbot/chatbot/static/css/chatbot_style.css
+++ b/AI_Chatbot/chatbot/static/css/chatbot_style.css
@@ -6,6 +6,30 @@ body, html {
     background-color: #0c0041;
 }
 
+.typing-indicator {
+  display: flex;
+  align-items: center;
+  margin: 6px 0;
+  padding-left: 10px;
+  font-style: italic;
+  color: gray;
+}
+
+.typing-dots span {
+  animation: blink 1.4s infinite both;
+  font-size: 18px;
+  margin-right: 3px;
+}
+
+.typing-dots span:nth-child(2) { animation-delay: .2s; }
+.typing-dots span:nth-child(3) { animation-delay: .4s; }
+
+@keyframes blink {
+  0% { opacity: .2; }
+  20% { opacity: 1; }
+  100% { opacity: .2; }
+}
+
 .messages-box {
     flex: 1;
     overflow-y: auto;
@@ -13,6 +37,7 @@ body, html {
 
 .messages-list {
     padding-left: 0;
+    height: 100%;
 }
 
 .message {
@@ -27,12 +52,10 @@ body, html {
 
 .sent {
     background-color: #dcf8c6;
-    align-self: flex-end;
 }
 
 .received {
     background-color: #f1f0f0;
-    align-self: flex-start;
 }
 
 .message-form {
