--- a/AI_Chatbot/data_real_estate/templates/form/form_base.html
+++ b/AI_Chatbot/data_real_estate/templates/form/form_base.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/registrations/registration-7/assets/css/registration-7.css">
+  <link href="{% static 'img/favicon.ico' %}" rel="icon">
   {% block extra_links %} {% endblock %}
 </head>
 <body>
