--- a/AI_Chatbot/data_real_estate/templates/main/main_base.html
+++ b/AI_Chatbot/data_real_estate/templates/main/main_base.html
@@ -17,7 +17,9 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" 
         referrerpolicy="no-referrer">
-  
+
+  <link href="{% static 'img/favicon.ico' %}" rel="icon">
+
   <!-- Template stylesheet -->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
