--- a/AI_Chatbot/chatbot/templates/chatbot.html
+++ b/AI_Chatbot/chatbot/templates/chatbot.html
@@ -16,9 +16,7 @@
   <div class="card flex-grow-1">
     <div class="card-header bg_info text-white d-flex justify-content-between align-items-center">
         <span>IMMOBIL Chatbot</span>
-        <a href="{% url 'clear_chat' %}" class="btn btn-danger btn-sm">
-            EFFACER
-        </a>
+        <!-- <a href="{% url 'clear_chat' %}" class="btn btn-danger btn-sm">EFFACER</a> -->
     </div>
 
     <div class="card-body messages-box">
@@ -132,10 +130,10 @@
     const messageItem = document.createElement('li');
     messageItem.classList.add('message','sent');
     messageItem.innerHTML = ` 
-        <div class="message-text">
-          <div class="message-sender"><b>Vous</b></div>
-          <div class="message-content">${message}<br></div>
-        </div>
+      <div class="message-text">
+        <div class="message-sender"><b>Vous</b></div>
+        <div class="message-content">${message}<br></div>
+      </div>
     `;
     messagesList.appendChild(messageItem);
     scrollToBottom();
