--- a/AI_Chatbot/data_real_estate/templates/main/main_base.html
+++ b/AI_Chatbot/data_real_estate/templates/main/main_base.html
@@ -48,7 +48,7 @@
           </a>
         </li>
         <li class="nav-item mb-2">
-            <a href="{% url 'add_property' %}" class="sidebar-link" id="sidebar-create">
+            <a href="{% url 'property_form' %}" class="sidebar-link" id="sidebar-create">
                 <i class="fa-solid fa-plus sidebar-icon"></i> Ajouter un bien
             </a>
         </li>
