--- a/AI_Chatbot/data_real_estate/templates/main/property_detail.html
+++ b/AI_Chatbot/data_real_estate/templates/main/property_detail.html
@@ -15,6 +15,10 @@
     <p class="text-muted">
         Type de transaction: {{ property.transaction_type }}
     </p>
+
+    <p class="text-muted">
+        Prix: {{ property.price }} FCFA
+    </p>
   
     <!-- {% if property.image %}
         <img src="{{ property.image.url }}" class="img-fluid mb-4" width="800" alt="{{ property.title }}">
